- Fixed: [#2508] default lang option